deploy/live/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: <SERVICE_NAME>-<NAMESPACE>-<BRANCH_SLUG>
  labels:
    app: <SERVICE_NAME>-<NAMESPACE>-<BRANCH_SLUG>
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: front
  selector:
    app: <SERVICE_NAME>-<NAMESPACE>-<BRANCH_SLUG>
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <SERVICE_NAME>-<NAMESPACE>-<BRANCH_SLUG>
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    cert-manager.io/issuer: "letsencrypt-prod-wildcard"
    ingress.kubernetes.io/proxy-body-size: 5m
    nginx.ingress.kubernetes.io/proxy-body-size: 5m
spec:
  tls:
  - hosts:
      - "beauty.easyweek.io"
    secretName: beauty-easyweek-io-tls
  - hosts:
      - "beauty.easyweek.com.ua"
    secretName: beauty-easyweek-com-ua-tls
  - hosts:
      - "beauty.easyweek.de"
    secretName: beauty-easyweek-de-tls
  - hosts:
      - "beauty.easyweek.ru"
    secretName: beauty-easyweek-ru-tls
  rules:
  - host: "beauty.easyweek.io"
    http: &http_rules
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: <SERVICE_NAME>-<NAMESPACE>-<BRANCH_SLUG>
            port:
              number: 3000
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: awescode-headless-cms-<NAMESPACE>-<BRANCH_SLUG>
            port:
              number: 8080
  - host: "beauty.easyweek.com.ua"
    http: *http_rules
  - host: "beauty.easyweek.de"
    http: *http_rules
  - host: "beauty.easyweek.ru"
    http: *http_rules
  # - host: "<BRANCH_SLUG>.<KUBE_ENVIRONMENT>.beauty.easyweek.es"
  #   http: *http_rules
  # - host: "<BRANCH_SLUG>.<KUBE_ENVIRONMENT>.easyweek.nl"
  #   http: *http_rules
  # - host: "<BRANCH_SLUG>.<KUBE_ENVIRONMENT>.easyweek.be"
  #   http: *http_rules
  # - host: "<BRANCH_SLUG>.<KUBE_ENVIRONMENT>.easyweek.fr"
  #   http: *http_rules
  # - host: "<BRANCH_SLUG>.<KUBE_ENVIRONMENT>.easyweek.ch"
  #   http: *http_rules
  # - host: "<BRANCH_SLUG>.<KUBE_ENVIRONMENT>.easyweek.at"
  #   http: *http_rules
  # - host: "<BRANCH_SLUG>.<KUBE_ENVIRONMENT>.easyweek.lt"
  #   http: *http_rules
  # - host: "<BRANCH_SLUG>.<KUBE_ENVIRONMENT>.easyweek.pl"
  #   http: *http_rules
  # - host: "<BRANCH_SLUG>.<KUBE_ENVIRONMENT>.easyweek.lv"
  #   http: *http_rules
  # - host: "<BRANCH_SLUG>.<KUBE_ENVIRONMENT>.easyweek.fi"
  #   http: *http_rules
  # - host: "<BRANCH_SLUG>.<KUBE_ENVIRONMENT>.easyweek.ee"
  #   http: *http_rules
  # - host: "<BRANCH_SLUG>.<KUBE_ENVIRONMENT>.easyweek.se"
  #   http: *http_rules
  # - host: "<BRANCH_SLUG>.<KUBE_ENVIRONMENT>.easyweek.dk"
  #   http: *http_rules
  # - host: "<BRANCH_SLUG>.<KUBE_ENVIRONMENT>.easyweek.no"
  #   http: *http_rules
  # - host: "<BRANCH_SLUG>.<KUBE_ENVIRONMENT>.easyweek.ge"
  #   http: *http_rules
  # - host: "<BRANCH_SLUG>.<KUBE_ENVIRONMENT>.easyweek.bg"
  #   http: *http_rules
